k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcoffee-svc
  labels:
    app: cloudcoffee
spec:
  type: LoadBalancer
  selector:
    app: cloudcoffee
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
