k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: cloudcoffee-network-policy

spec:
  podSelector:
    matchLabels:
      app: cloudcoffee

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
